--- a/3-infrastructure/traefik/Chart.yaml
+++ b/3-infrastructure/traefik/Chart.yaml
@@ -12,3 +12,11 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: "1.0"
+dependencies:
+- name: traefik
+  condition: traefik.enabled
+  version: 30.0.2
+  repository: https://traefik.github.io/charts
+  tags:
+    - v30.0.2
+    - traefik
